# libmonty-logging

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
src/libmonty_logging/: __init__.py  __main__.py  configs.py  formatters.py  handlers.py  helper.py  message.py  paths.py  version.py
src/libmonty_logging/config/: __init__.py
src/libmonty_logging/config/file_and_stream/: __init__.py  v1.py
src/libmonty_logging/data/: file-and-stream-v1.ini
tests/: basic.py  basic_1.py  basic_2.py  basic_3.py  default.py  default_1.py  default_2.py
