[metadata]
name = libmonty-logging
version = attr: libmonty_logging.version.__version__
url = https://codeberg.org/sunarch/libmonty-logging
project_urls =
    Bug Tracker = https://codeberg.org/sunarch/libmonty-logging/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: System :: Logging
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = libmonty-logging - Python library - logging-related
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libmonty, logging
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
    libmonty_logging = data/file-and-stream-v1.ini
